--- a/package.json
+++ b/package.json
@@ -1,26 +1,44 @@
 {
-  "name": "elderlink",
+  "name": "main",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start -c",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/generative-ai": "0.3.1",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.6.6",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-clipboard": "~4.3.1",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.13",
+    "expo-device": "~5.4.0",
+    "expo-location": "~16.1.0",
+    "expo-notifications": "~0.20.1",
+    "expo-sensors": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-task-manager": "~11.3.0",
     "firebase": "10.7.1",
+    "jsdom": "^24.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
+    "react-native-call-detection": "github:priteshrnandgaonkar/react-native-call-detection#d6e90c32188341b36508853eb743b9a475acdd5a",
+    "react-native-callkeep": "4.3.12",
+    "react-native-fall-detection-module": "0.1.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "2.2.0",
+    "typescript": "^5.4.5",
+    "node-html-parser": "6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
